// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapCard.vue Events should receive and process correctly the event when dropdown is closed 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" target="_blank" class="row row--can-hover">
  <div class="viz-column--main-info">
    <div class="cell cell--thumbnail cell--first">
      <div class="cell__media"><img src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/144/144.png" class="cell__map-thumbnail">
        <!---->
      </div> <span class="checkbox cell__checkbox"><input type="checkbox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
    </div>
    <div class="cell cell--map-name cell--main">
      <div class="cell__title">
        <h3 class="text is-caption is-txtGrey u-ellipsis cell--map-name__text">
          First Map
        </h3> <span class="cell__favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
      </div>
      <!---->
    </div>
  </div>
  <div class="viz-column--extra-info">
    <div class="viz-column--statusL">
      <div class="cell cell--medium u-p--0">
        <typebadge-stub visualizationtype="derived" incondensedcard="true"></typebadge-stub>
      </div>
      <div class="cell cell--large"><span class="text is-small is-txtSoftGrey">MapCard.lastUpdate</span></div>
      <div class="cell cell--xsmall u-txt-right u-p--0"><span class="text is-small is-txtSoftGrey">0</span></div>
    </div>
    <div class="viz-column--shareS">
      <div class="cell cell--small">
        <p class="text is-small is-txtSoftGrey">
          MapCard.shared.PUBLIC
        </p>
      </div>
      <div class="cell quick-actions cell--last">
        <!---->
        <mapquickactions-stub map="[object Object]" storeactiontype="maps" class="quick-actions__element"></mapquickactions-stub>
      </div>
    </div>
  </div>
</a>
`;

exports[`MapCard.vue Events should receive and process correctly the event when dropdown is open 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" target="_blank" class="row row--quick-actions-open row--can-hover">
  <div class="viz-column--main-info">
    <div class="cell cell--thumbnail cell--first">
      <div class="cell__media"><img src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/144/144.png" class="cell__map-thumbnail">
        <!---->
      </div> <span class="checkbox cell__checkbox"><input type="checkbox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
    </div>
    <div class="cell cell--map-name cell--main">
      <div class="cell__title">
        <h3 class="text is-caption is-txtGrey u-ellipsis cell--map-name__text">
          First Map
        </h3> <span class="cell__favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
      </div>
      <!---->
    </div>
  </div>
  <div class="viz-column--extra-info">
    <div class="viz-column--statusL">
      <div class="cell cell--medium u-p--0">
        <typebadge-stub visualizationtype="derived" incondensedcard="true"></typebadge-stub>
      </div>
      <div class="cell cell--large"><span class="text is-small is-txtSoftGrey">MapCard.lastUpdate</span></div>
      <div class="cell cell--xsmall u-txt-right u-p--0"><span class="text is-small is-txtSoftGrey">0</span></div>
    </div>
    <div class="viz-column--shareS">
      <div class="cell cell--small">
        <p class="text is-small is-txtSoftGrey">
          MapCard.shared.PUBLIC
        </p>
      </div>
      <div class="cell quick-actions cell--last">
        <!---->
        <mapquickactions-stub map="[object Object]" storeactiontype="maps" class="quick-actions__element"></mapquickactions-stub>
      </div>
    </div>
  </div>
</a>
`;

exports[`MapCard.vue Methods should close quick actions 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" target="_blank" class="row row--can-hover">
  <div class="viz-column--main-info">
    <div class="cell cell--thumbnail cell--first">
      <div class="cell__media"><img src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/144/144.png" class="cell__map-thumbnail">
        <!---->
      </div> <span class="checkbox cell__checkbox"><input type="checkbox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
    </div>
    <div class="cell cell--map-name cell--main">
      <div class="cell__title">
        <h3 class="text is-caption is-txtGrey u-ellipsis cell--map-name__text">
          First Map
        </h3> <span class="cell__favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
      </div>
      <!---->
    </div>
  </div>
  <div class="viz-column--extra-info">
    <div class="viz-column--statusL">
      <div class="cell cell--medium u-p--0">
        <typebadge-stub visualizationtype="derived" incondensedcard="true"></typebadge-stub>
      </div>
      <div class="cell cell--large"><span class="text is-small is-txtSoftGrey">MapCard.lastUpdate</span></div>
      <div class="cell cell--xsmall u-txt-right u-p--0"><span class="text is-small is-txtSoftGrey">0</span></div>
    </div>
    <div class="viz-column--shareS">
      <div class="cell cell--small">
        <p class="text is-small is-txtSoftGrey">
          MapCard.shared.PUBLIC
        </p>
      </div>
      <div class="cell quick-actions cell--last">
        <!---->
        <mapquickactions-stub map="[object Object]" storeactiontype="maps" class="quick-actions__element"></mapquickactions-stub>
      </div>
    </div>
  </div>
</a>
`;

exports[`MapCard.vue Methods should open quick actions 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" target="_blank" class="row row--quick-actions-open row--can-hover">
  <div class="viz-column--main-info">
    <div class="cell cell--thumbnail cell--first">
      <div class="cell__media"><img src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/144/144.png" class="cell__map-thumbnail">
        <!---->
      </div> <span class="checkbox cell__checkbox"><input type="checkbox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
    </div>
    <div class="cell cell--map-name cell--main">
      <div class="cell__title">
        <h3 class="text is-caption is-txtGrey u-ellipsis cell--map-name__text">
          First Map
        </h3> <span class="cell__favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
      </div>
      <!---->
    </div>
  </div>
  <div class="viz-column--extra-info">
    <div class="viz-column--statusL">
      <div class="cell cell--medium u-p--0">
        <typebadge-stub visualizationtype="derived" incondensedcard="true"></typebadge-stub>
      </div>
      <div class="cell cell--large"><span class="text is-small is-txtSoftGrey">MapCard.lastUpdate</span></div>
      <div class="cell cell--xsmall u-txt-right u-p--0"><span class="text is-small is-txtSoftGrey">0</span></div>
    </div>
    <div class="viz-column--shareS">
      <div class="cell cell--small">
        <p class="text is-small is-txtSoftGrey">
          MapCard.shared.PUBLIC
        </p>
      </div>
      <div class="cell quick-actions cell--last">
        <!---->
        <mapquickactions-stub map="[object Object]" storeactiontype="maps" class="quick-actions__element"></mapquickactions-stub>
      </div>
    </div>
  </div>
</a>
`;

exports[`MapCard.vue Methods should show thumbnail error 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" target="_blank" class="row row--can-hover">
  <div class="viz-column--main-info">
    <div class="cell cell--thumbnail cell--first">
      <div class="cell__media has-error">
        <!---->
        <div class="MapCard-error"></div>
      </div> <span class="checkbox cell__checkbox"><input type="checkbox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
    </div>
    <div class="cell cell--map-name cell--main">
      <div class="cell__title">
        <h3 class="text is-caption is-txtGrey u-ellipsis cell--map-name__text">
          First Map
        </h3> <span class="cell__favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
      </div>
      <!---->
    </div>
  </div>
  <div class="viz-column--extra-info">
    <div class="viz-column--statusL">
      <div class="cell cell--medium u-p--0">
        <typebadge-stub visualizationtype="derived" incondensedcard="true"></typebadge-stub>
      </div>
      <div class="cell cell--large"><span class="text is-small is-txtSoftGrey">MapCard.lastUpdate</span></div>
      <div class="cell cell--xsmall u-txt-right u-p--0"><span class="text is-small is-txtSoftGrey">0</span></div>
    </div>
    <div class="viz-column--shareS">
      <div class="cell cell--small">
        <p class="text is-small is-txtSoftGrey">
          MapCard.shared.PUBLIC
        </p>
      </div>
      <div class="cell quick-actions cell--last">
        <!---->
        <mapquickactions-stub map="[object Object]" storeactiontype="maps" class="quick-actions__element"></mapquickactions-stub>
      </div>
    </div>
  </div>
</a>
`;

exports[`MapCard.vue Methods should toggle mouse hover 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" target="_blank" class="row row--no-hover row--can-hover">
  <div class="viz-column--main-info">
    <div class="cell cell--thumbnail cell--first">
      <div class="cell__media"><img src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/144/144.png" class="cell__map-thumbnail">
        <!---->
      </div> <span class="checkbox cell__checkbox"><input type="checkbox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
    </div>
    <div class="cell cell--map-name cell--main">
      <div class="cell__title">
        <h3 class="text is-caption is-txtGrey u-ellipsis cell--map-name__text">
          First Map
        </h3> <span class="cell__favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
      </div>
      <!---->
    </div>
  </div>
  <div class="viz-column--extra-info">
    <div class="viz-column--statusL">
      <div class="cell cell--medium u-p--0">
        <typebadge-stub visualizationtype="derived" incondensedcard="true"></typebadge-stub>
      </div>
      <div class="cell cell--large"><span class="text is-small is-txtSoftGrey">MapCard.lastUpdate</span></div>
      <div class="cell cell--xsmall u-txt-right u-p--0"><span class="text is-small is-txtSoftGrey">0</span></div>
    </div>
    <div class="viz-column--shareS">
      <div class="cell cell--small">
        <p class="text is-small is-txtSoftGrey">
          MapCard.shared.PUBLIC
        </p>
      </div>
      <div class="cell quick-actions cell--last">
        <!---->
        <mapquickactions-stub map="[object Object]" storeactiontype="maps" class="quick-actions__element"></mapquickactions-stub>
      </div>
    </div>
  </div>
</a>
`;

exports[`MapCard.vue Methods should toggle mouse hover 2`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" target="_blank" class="row row--can-hover">
  <div class="viz-column--main-info">
    <div class="cell cell--thumbnail cell--first">
      <div class="cell__media"><img src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/144/144.png" class="cell__map-thumbnail">
        <!---->
      </div> <span class="checkbox cell__checkbox"><input type="checkbox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
    </div>
    <div class="cell cell--map-name cell--main">
      <div class="cell__title">
        <h3 class="text is-caption is-txtGrey u-ellipsis cell--map-name__text">
          First Map
        </h3> <span class="cell__favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
      </div>
      <!---->
    </div>
  </div>
  <div class="viz-column--extra-info">
    <div class="viz-column--statusL">
      <div class="cell cell--medium u-p--0">
        <typebadge-stub visualizationtype="derived" incondensedcard="true"></typebadge-stub>
      </div>
      <div class="cell cell--large"><span class="text is-small is-txtSoftGrey">MapCard.lastUpdate</span></div>
      <div class="cell cell--xsmall u-txt-right u-p--0"><span class="text is-small is-txtSoftGrey">0</span></div>
    </div>
    <div class="viz-column--shareS">
      <div class="cell cell--small">
        <p class="text is-small is-txtSoftGrey">
          MapCard.shared.PUBLIC
        </p>
      </div>
      <div class="cell quick-actions cell--last">
        <!---->
        <mapquickactions-stub map="[object Object]" storeactiontype="maps" class="quick-actions__element"></mapquickactions-stub>
      </div>
    </div>
  </div>
</a>
`;

exports[`MapCard.vue should render correct contents 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" target="_blank" class="row row--selected row--can-hover">
  <div class="viz-column--main-info">
    <div class="cell cell--thumbnail cell--first">
      <div class="cell__media"><img src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/144/144.png" class="cell__map-thumbnail">
        <!---->
      </div> <span class="checkbox cell__checkbox"><input type="checkbox" class="checkbox-input is-selected"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
    </div>
    <div class="cell cell--map-name cell--main">
      <div class="cell__title">
        <h3 class="text is-caption is-txtGrey u-ellipsis cell--map-name__text">
          First Map
        </h3> <span class="cell__favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
      </div>
      <!---->
    </div>
  </div>
  <div class="viz-column--extra-info">
    <div class="viz-column--statusL">
      <div class="cell cell--medium u-p--0">
        <typebadge-stub visualizationtype="derived" incondensedcard="true"></typebadge-stub>
      </div>
      <div class="cell cell--large"><span class="text is-small is-txtSoftGrey">MapCard.lastUpdate</span></div>
      <div class="cell cell--xsmall u-txt-right u-p--0"><span class="text is-small is-txtSoftGrey">0</span></div>
    </div>
    <div class="viz-column--shareS">
      <div class="cell cell--small">
        <p class="text is-small is-txtSoftGrey">
          MapCard.shared.PUBLIC
        </p>
      </div>
      <div class="cell quick-actions cell--last">
        <!---->
        <mapquickactions-stub map="[object Object]" storeactiontype="maps" class="quick-actions__element"></mapquickactions-stub>
      </div>
    </div>
  </div>
</a>
`;

exports[`MapCard.vue should render description and tag dropdown 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" target="_blank" class="row row--can-hover">
  <div class="viz-column--main-info">
    <div class="cell cell--thumbnail cell--first">
      <div class="cell__media"><img src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/144/144.png" class="cell__map-thumbnail">
        <!---->
      </div> <span class="checkbox cell__checkbox"><input type="checkbox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
    </div>
    <div class="cell cell--map-name cell--main">
      <div class="cell__title">
        <h3 class="text is-caption is-txtGrey u-ellipsis cell--map-name__text">
          First Map
        </h3> <span class="cell__favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
      </div>
      <div class="metadata">
        <div class="metadata__element"><img src="../../assets/icons/common/tag.svg" width="14" height="14" class="metadata__icon">
          <!---->
          <featuresdropdown-stub list="Hi,Hello,CARTO Rules,Shows dropdown" feature="tag" linkroute="tagSearch"><span class="metadata__tags-count text is-small is-txtSoftGrey">4 DatasetCard.tags</span></featuresdropdown-stub>
        </div>
        <!---->
        <!---->
      </div>
    </div>
  </div>
  <div class="viz-column--extra-info">
    <div class="viz-column--statusL">
      <div class="cell cell--medium u-p--0">
        <typebadge-stub visualizationtype="derived" incondensedcard="true"></typebadge-stub>
      </div>
      <div class="cell cell--large"><span class="text is-small is-txtSoftGrey">MapCard.lastUpdate</span></div>
      <div class="cell cell--xsmall u-txt-right u-p--0"><span class="text is-small is-txtSoftGrey">0</span></div>
    </div>
    <div class="viz-column--shareS">
      <div class="cell cell--small">
        <p class="text is-small is-txtSoftGrey">
          MapCard.shared.PUBLIC
        </p>
      </div>
      <div class="cell quick-actions cell--last">
        <!---->
        <mapquickactions-stub map="[object Object]" storeactiontype="maps" class="quick-actions__element"></mapquickactions-stub>
      </div>
    </div>
  </div>
</a>
`;

exports[`MapCard.vue should render description and tags 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" target="_blank" class="row row--can-hover">
  <div class="viz-column--main-info">
    <div class="cell cell--thumbnail cell--first">
      <div class="cell__media"><img src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/144/144.png" class="cell__map-thumbnail">
        <!---->
      </div> <span class="checkbox cell__checkbox"><input type="checkbox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
    </div>
    <div class="cell cell--map-name cell--main">
      <div class="cell__title">
        <h3 class="text is-caption is-txtGrey u-ellipsis cell--map-name__text">
          First Map
        </h3> <span class="cell__favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
      </div>
      <div class="metadata">
        <div class="metadata__element"><img src="../../assets/icons/common/tag.svg" width="14" height="14" class="metadata__icon">
          <ul class="metadata__tags">
            <li>
              <router-link to="[object Object]" class="text is-small is-txtSoftGrey metadata__tag">Hi</router-link><span class="text is-small is-txtSoftGrey">,&nbsp;</span>
            </li>
            <li>
              <router-link to="[object Object]" class="text is-small is-txtSoftGrey metadata__tag">Hello</router-link><span class="text is-small is-txtSoftGrey">,&nbsp;</span>
            </li>
            <li>
              <router-link to="[object Object]" class="text is-small is-txtSoftGrey metadata__tag">CARTO Rules</router-link>
              <!---->
            </li>
          </ul>
          <!---->
        </div>
        <!---->
        <!---->
      </div>
    </div>
  </div>
  <div class="viz-column--extra-info">
    <div class="viz-column--statusL">
      <div class="cell cell--medium u-p--0">
        <typebadge-stub visualizationtype="derived" incondensedcard="true"></typebadge-stub>
      </div>
      <div class="cell cell--large"><span class="text is-small is-txtSoftGrey">MapCard.lastUpdate</span></div>
      <div class="cell cell--xsmall u-txt-right u-p--0"><span class="text is-small is-txtSoftGrey">0</span></div>
    </div>
    <div class="viz-column--shareS">
      <div class="cell cell--small">
        <p class="text is-small is-txtSoftGrey">
          MapCard.shared.PUBLIC
        </p>
      </div>
      <div class="cell quick-actions cell--last">
        <!---->
        <mapquickactions-stub map="[object Object]" storeactiontype="maps" class="quick-actions__element"></mapquickactions-stub>
      </div>
    </div>
  </div>
</a>
`;

exports[`MapCard.vue should render shared brief with all organisation members 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" target="_blank" class="row row--can-hover">
  <div class="viz-column--main-info">
    <div class="cell cell--thumbnail cell--first">
      <div class="cell__media"><img src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/144/144.png" class="cell__map-thumbnail">
        <!---->
      </div> <span class="checkbox cell__checkbox"><input type="checkbox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
    </div>
    <div class="cell cell--map-name cell--main">
      <div class="cell__title">
        <h3 class="text is-caption is-txtGrey u-ellipsis cell--map-name__text">
          First Map
        </h3> <span class="cell__favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
      </div>
      <div class="metadata">
        <!---->
        <!---->
        <sharedbrief-stub colleagues="[object Object]" class="metadata__element u-ellipsis"></sharedbrief-stub>
      </div>
    </div>
  </div>
  <div class="viz-column--extra-info">
    <div class="viz-column--statusL">
      <div class="cell cell--medium u-p--0">
        <typebadge-stub visualizationtype="derived" incondensedcard="true"></typebadge-stub>
      </div>
      <div class="cell cell--large"><span class="text is-small is-txtSoftGrey">MapCard.lastUpdate</span></div>
      <div class="cell cell--xsmall u-txt-right u-p--0"><span class="text is-small is-txtSoftGrey">0</span></div>
    </div>
    <div class="viz-column--shareS">
      <div class="cell cell--small">
        <p class="text is-small is-txtSoftGrey">
          MapCard.shared.PUBLIC
        </p>
      </div>
      <div class="cell quick-actions cell--last">
        <!---->
        <mapquickactions-stub map="[object Object]" storeactiontype="maps" class="quick-actions__element"></mapquickactions-stub>
      </div>
    </div>
  </div>
</a>
`;

exports[`MapCard.vue should show the map is shared 1`] = `
<a href="http://cdb.localhost.lan:3000/viz/hello.e97e0001-f1c2-425e-8c9b-0fb28da59200" target="_blank" class="row row--can-hover">
  <div class="viz-column--main-info">
    <div class="cell cell--thumbnail cell--first">
      <div class="cell__media"><img src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/144/144.png" class="cell__map-thumbnail">
        <!---->
      </div> <span class="checkbox cell__checkbox"><input type="checkbox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span>
    </div>
    <div class="cell cell--map-name cell--main">
      <div class="cell__title">
        <h3 class="text is-caption is-txtGrey u-ellipsis cell--map-name__text">
          First Map
        </h3> <span class="cell__favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span>
      </div>
      <div class="metadata">
        <!---->
        <div class="metadata__element"><img svg-inline="" src="../../assets/icons/common/user.svg" class="metadata__icon"> <span class="text is-small is-txtSoftGrey">hello</span></div>
        <!---->
      </div>
    </div>
  </div>
  <div class="viz-column--extra-info">
    <div class="viz-column--statusL">
      <div class="cell cell--medium u-p--0">
        <typebadge-stub visualizationtype="derived" incondensedcard="true"></typebadge-stub>
      </div>
      <div class="cell cell--large"><span class="text is-small is-txtSoftGrey">MapCard.lastUpdate</span></div>
      <div class="cell cell--xsmall u-txt-right u-p--0"><span class="text is-small is-txtSoftGrey">0</span></div>
    </div>
    <div class="viz-column--shareS">
      <div class="cell cell--small">
        <p class="text is-small is-txtSoftGrey">
          MapCard.shared.PUBLIC
        </p>
      </div>
      <div class="cell quick-actions cell--last">
        <div class="quick-actions__placeholder"></div>
        <mapquickactions-stub map="[object Object]" storeactiontype="maps" class="quick-actions__element"></mapquickactions-stub>
      </div>
    </div>
  </div>
</a>
`;
